@startuml

title __FILESTORAGE's Class Diagram__\n

  package filestorage {
    class FileController {
        {static} - logger : Logger
        + uploadFile()
    }
  }
  

  package filestorage {
    class FileService {
        - URL : String
        - ACCESS_KEY : String
        - SECRET_KEY : String
        - BUCKET : String
        - minioClient : MinioClient
        + FileService()
        - createBucket()
        + uploadFile()
    }
  }
  

  package filestorage {
    class UploadFileResponse {
        - fileName : String
        - fileDownloadUri : String
        - fileType : String
        - size : long
        + UploadFileResponse()
        + getFileName()
        + getFileDownloadUri()
        + getFileType()
        + getSize()
    }
  }
  

  FileController o-- FileService : fileService
  FileController o-- MessagingController : messagingController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
